force-app/main/default/objects/Tag__c/Tag__c.object-meta.xml
<CustomObject>
    <description>[Alteryx/Manual] - Provides list on the tag that are available to apply to Contacts and other objects.</description>
    <label>Tag</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>