force-app/main/default/objects/Tag__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color</fullName>
    <description>This field describes the tag background color of the tag.</description>
    <label>Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>