force-app/main/default/objects/Tag__c/fields/Business_Organization__c.field-meta.xml
<CustomField>
    <fullName>Business_Organization__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>[Alteryx/Ed Plus] - Populated via Alteryx to indicate the business organization this tag is for.</description>
    <inlineHelpText>[Alteryx/Ed Plus] - Populated via Alteryx to indicate the business organization this tag is for.</inlineHelpText>
    <label>Business Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>