force-app/main/default/objects/Tag__c/fields/Corporate_Partner__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Partner__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>[Alteryx/Ed Plus] - This field indicates whether the tag is Corporate Partner (true = yes, false = no).</description>
    <inlineHelpText>[Alteryx/Ed Plus] - This field indicates whether the tag is Corporate Partner (true = yes, false = no).</inlineHelpText>
    <label>Corporate Partner</label>
    <type>Checkbox</type>
</CustomField>