force-app/main/default/objects/Tag__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>This field denotes the order that a tag should to be placed on the UI/LWC from left-to-right (lowest to highest).</description>
    <inlineHelpText>This field denotes the order that a tag should to be placed on the UI/LWC from left-to-right (lowest to highest).</inlineHelpText>
    <label>Priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>