force-app/main/default/objects/Tag__c/fields/Removeable__c.field-meta.xml
<CustomField>
    <fullName>Removeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the tag can be removed from the UI (true = yes, false = no).</description>
    <inlineHelpText>This field indicates if the tag can be removed from the UI (true = yes, false = no).</inlineHelpText>
    <label>Removeable</label>
    <type>Checkbox</type>
</CustomField>