force-app/main/default/objects/Tag__c/fields/Searchable__c.field-meta.xml
<CustomField>
    <fullName>Searchable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the tag can be search and applied through the UI/LWC (true = yes, false = no).</description>
    <inlineHelpText>This field indicates if the tag can be search and applied through the UI/LWC (true = yes, false = no).</inlineHelpText>
    <label>Searchable</label>
    <type>Checkbox</type>
</CustomField>