force-app/main/default/objects/Tag__c/fields/Tag_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Tag_Api_Name__c</fullName>
    <description>This field holds the name of the icon used on the tag and stored in static resources. This field is used within the formula field Tag_Icon_URL__c.</description>
    <inlineHelpText>This field holds the name of the icon used on the tag and stored in static resources. This field is used within the formula field Tag_Icon_URL__c.</inlineHelpText>
    <label>Tag_Api_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>