force-app/main/default/objects/Tag__c/fields/Tag_Description__c.field-meta.xml
<CustomField>
    <fullName>Tag_Description__c</fullName>
    <description>This field denotes the tag details/description and will be displayed in the UI/LWC when the user clicks on the tag.</description>
    <inlineHelpText>This field denotes the tag details/description and will be displayed in the UI/LWC when the user clicks on the tag.</inlineHelpText>
    <label>Tag Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>