force-app/main/default/objects/Tag__c/fields/Tag_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Tag_Icon_URL__c</fullName>
    <description>This formula field that provides the URL so that the icon/image can be displayed on the tag inside the UI/LWC. Uses Tag_Api_Name__c within the formula and maps to the image stored in static resources.</description>
    <formula>$CustomMetadata.Tag_Icon_URL__mdt.Tag_Icon.Tag_Icon_URL__c  +  Tag_Api_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula field that provides the URL so that the icon/image can be displayed on the tag inside the UI/LWC. Uses Tag_Api_Name__c within the formula and maps to the image stored in static resources.</inlineHelpText>
    <label>Tag_Icon</label>
    <type>Text</type>
</CustomField>