force-app/main/default/objects/Tag__c/fields/Tag_Label_Color__c.field-meta.xml
<CustomField>
    <fullName>Tag_Label_Color__c</fullName>
    <description>This field denotes the color of the tag label/text. Required format: 6 digit Hex code (i.e. cccccc, 333333, 8C1D40)</description>
    <inlineHelpText>This field denotes the color of the tag label/text. Required format: 6 digit Hex code (i.e. cccccc, 333333, 8C1D40)</inlineHelpText>
    <label>Tag Label Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>