force-app/main/default/objects/Tag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Searchable__c</columns>
    <columns>Removeable__c</columns>
    <columns>Corporate_Partner__c</columns>
    <columns>Priority__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>